--- a/install
+++ b/install
@@ -476,6 +476,7 @@ fi
 
 while true; do
     # Prompt the user for the installation directory
+    echo "Install Location: $INSTALL_DIR"
     read -p "Press Enter to accept, or choose a new location: " INSTALL_DIR </dev/tty
     INSTALL_DIR=${INSTALL_DIR:-$DEFAULT_INSTALL_DIR}
 
