Change behaviour of bash

--- a/install
+++ b/install
@@ -283,7 +283,7 @@ if [ -z "${BASH_VERSION:-}" ]; then
             bash "$0" "$@"
         else
             # If the script is being piped (non-interactive), re-execute from stdin
-            bash -s "$@" < /dev/stdin
+            bash -c "$@" < /dev/stdin
             exit $?
         fi
     else
