--- a/install
+++ b/install
@@ -83,8 +83,7 @@ IF "%TAR_INSTALLED%" == "1" (
     ECHO [ ] tar is not installed
 )
 
-ECHO %DOCKER_INSTALLED%
-ECHO %TAR_INSTALLED%
+IF "%DOCKER_INSTALLED%" == "0" ECHO Docker not installed
 
 :: If both are installed, continue
 IF "%DOCKER_INSTALLED%" == "1" IF "%TAR_INSTALLED%" == "1" (
