Better quote stuff

--- a/install
+++ b/install
@@ -24,7 +24,7 @@ SETLOCAL ENABLEDELAYEDEXPANSION
 ON BREAK GOTO cleanup
 
 SET INSTALL_FOLDER=nomi-discord-python
-SET HOME_DIR=%USERPROFILE%
+SET "HOME_DIR=%USERPROFILE%"
 FOR %%I IN ("%~dp0") DO SET "SCRIPT_ROOT=%%~fI"
 
 :: Perform a basic sanity check
@@ -171,13 +171,13 @@ SET "DOWNLOAD_DIR=%INSTALL_DIR%.download"
 
 :: Check we have write access to the location the user has provided.
 :: We'll try to create a test directory to check write access.
-MKDIR %DOWNLOAD_DIR% 2>NUL
+MKDIR "%DOWNLOAD_DIR%" 2>NUL
 IF ERRORLEVEL 1 (
     ECHO It looks like we can't write to the folder: %INSTALL_DIR%
     ECHO Please make sure you have permission to write to this directory and try again.
     GOTO cleanup
 ) ELSE (
-    ATTRIB +H %DOWNLOAD_DIR%
+    ATTRIB +H "%DOWNLOAD_DIR%"
 )
 
 :: Here we download the latest release from GitHub to INSTALL_FOLDER
@@ -211,7 +211,7 @@ IF /I NOT "!CONTINUE!" == "Y" (
 :: After that, get the install script, the license and everything inside
 :: the 'app' subdirectory
 ECHO Extracting installation files...
-tar -xvf "%DOWNLOAD_DIR%\install.zip" -C %INSTALL_DIR% --strip-components=1 --include="*\install" --include="*\LICENSE" --include="*\run" --include="*\setup" --include="*\update"
+tar -xvf "%DOWNLOAD_DIR%\install.zip" -C "%INSTALL_DIR%" --strip-components=1 --include="*\install" --include="*\LICENSE" --include="*\run" --include="*\setup" --include="*\update"
 IF ERRORLEVEL 1 (
     ECHO Failed to extract the installation files. Please try again.
     GOTO cleanup
@@ -249,7 +249,7 @@ ECHO The installation completed succesfully.
 IF EXIST "%INSTALL_DIR%\.nomi_setup_done" (
     ATTRIB -H "%INSTALL_DIR%\.nomi_setup_done" 2>NUL
 )
-TYPE NUL > "%INSTALL_DIR%\.nomi_setup_done"
+BREAK > "%INSTALL_DIR%\.nomi_setup_done"
 ATTRIB +H "%INSTALL_DIR%\.nomi_setup_done"
 
 ECHO:
@@ -266,8 +266,8 @@ IF /I "!OPEN_FOLDER!" == "Y" (
 :: In case we received an error between downloading and extracting
 :: the install files, delete them here
 IF EXIST "%INSTALL_DIR%.download" (
-    ATTRIB -H %DOWNLOAD_DIR%
-    RMDIR /S /Q %DOWNLOAD_DIR%
+    ATTRIB -H "%DOWNLOAD_DIR%"
+    RMDIR /S /Q "%DOWNLOAD_DIR%"
 )
 ENDLOCAL
 PAUSE
