--- a/install
+++ b/install
@@ -25,7 +25,7 @@ ON BREAK GOTO cleanup
 
 SET INSTALL_FOLDER=nomi-discord-python
 SET "HOME_DIR=%USERPROFILE%"
-FOR %%I IN ("%~dp0") DO SET "SCRIPT_ROOT=%%~fI"
+FOR %%I IN ("%~dp0") DO SET "SCRIPT_ROOT=%%~fI" & SET "SCRIPT_ROOT=%SCRIPT_ROOT:~0,-1%"
 
 :: Perform a basic sanity check
 IF NOT "%OS%" == "Windows_NT" (
@@ -135,7 +135,7 @@ SET "INSTALL_DIR=%DEFAULT_INSTALL_DIR%"
 
 :: Check if .nomi_setup_done exists in the script's current directory
 :: If it does, assume the user chose this directory last time
-if EXIST "%SCRIPT_ROOT%.nomi_setup_done" (
+if EXIST "%SCRIPT_ROOT%\.nomi_setup_done" (
     SET "INSTALL_DIR=%SCRIPT_ROOT%"
     ECHO This will update nomi-discord-python in the current directory
     ECHO:
@@ -163,21 +163,21 @@ ECHO:
 ECHO Proceeding with installation in: %INSTALL_DIR%
 
 :: Create the folder if it doesn't exist.
-IF NOT EXIST "%INSTALL_DIR%" (
-    MKDIR "%INSTALL_DIR%"
+IF NOT EXIST %INSTALL_DIR% (
+    MKDIR %INSTALL_DIR%
 )
 
-SET "DOWNLOAD_DIR=%INSTALL_DIR%.download"
+SET "DOWNLOAD_DIR=%INSTALL_DIR%\.download"
 
 :: Check we have write access to the location the user has provided.
 :: We'll try to create a test directory to check write access.
-MKDIR "%DOWNLOAD_DIR%" 2>NUL
+MKDIR %DOWNLOAD_DIR% 2>NUL
 IF ERRORLEVEL 1 (
     ECHO It looks like we can't write to the folder: %INSTALL_DIR%
     ECHO Please make sure you have permission to write to this directory and try again.
     GOTO cleanup
 ) ELSE (
-    ATTRIB +H "%DOWNLOAD_DIR%"
+    ATTRIB +H %DOWNLOAD_DIR%
 )
 
 :: Here we download the latest release from GitHub to INSTALL_FOLDER
@@ -211,7 +211,7 @@ IF /I NOT "!CONTINUE!" == "Y" (
 :: After that, get the install script, the license and everything inside
 :: the 'app' subdirectory
 ECHO Extracting installation files...
-tar -xvf "%DOWNLOAD_DIR%\install.zip" -C "%INSTALL_DIR%" --strip-components=1 --include="*\install" --include="*\LICENSE" --include="*\run" --include="*\setup" --include="*\update"
+tar -xvf "%DOWNLOAD_DIR%\install.zip" -C %INSTALL_DIR% --strip-components=1 --include="*\install" --include="*\LICENSE" --include="*\run" --include="*\setup" --include="*\update"
 IF ERRORLEVEL 1 (
     ECHO Failed to extract the installation files. Please try again.
     GOTO cleanup
@@ -266,8 +266,8 @@ IF /I "!OPEN_FOLDER!" == "Y" (
 :: In case we received an error between downloading and extracting
 :: the install files, delete them here
 IF EXIST "%INSTALL_DIR%.download" (
-    ATTRIB -H "%DOWNLOAD_DIR%"
-    RMDIR /S /Q "%DOWNLOAD_DIR%"
+    ATTRIB -H "%INSTALL_DIR%.download"
+    RMDIR /S /Q "%INSTALL_DIR%.download"
 )
 ENDLOCAL
 PAUSE
